--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
-<IfModule mod_rewrite.c>
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
 
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html-f
-RewriteRule ^(.*)$ $1.html
+    RewriteEngine on
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.html-f
+    RewriteRule ^(.*)$ $1.html
 
 </IfModule>
