--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,4 @@
 <IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin "*"
-
-    RewriteEngine on
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME}.html-f
-    RewriteRule ^(.*)$ $1.html
-
+Header set Access-Control-Allow-Origin "*"
+Referrer-Policy: no-referrer
 </IfModule>
